--- a/styles/style.css
+++ b/styles/style.css
@@ -76,19 +76,19 @@ body {
   font-size: 1.5rem;
 }
 .apresentacao__links__link {
-  display: flex;
-  justify-content: center;
-  gap: 16px;
-  border: 2px solid var(--cor-terciaria);
-  width: 50%;
-  text-align: center;
-  border-radius: 8px;
-  font-size: 1.5rem;
-  font-weight: 600;
-  padding: 21.5px 0;
-  text-decoration: none;
-  color: var(--cor-secundaria);
-  font-family: var(--fonte-secundaria);
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    border: 2px solid var(--cor-terciaria);
+    width: 50%;
+    text-align: center;
+    border-radius: 8px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: var(--cor-secundaria);
+    font-family: var(--fonte-secundaria);
 }
 .apresentacao__links__link:hover {
   background-color: var(--cor-hover);
@@ -98,10 +98,7 @@ body {
   width: 50%;
 }
 .rodape {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--cor-secundaria);
+  color: var(--cor-primaria);
   background-color: var(--cor-terciaria);
   padding: 24px;
   text-align: center;
