--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,7 @@ body {
 .apresentacao__conteudo__texto {
   font-size: 1.5rem;
   font-family: var(--fonte-secundaria);
+  line-height: 1.5;
 }
 
 .apresentacao__links {
@@ -75,19 +76,19 @@ body {
   font-size: 1.5rem;
 }
 .apresentacao__links__link {
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-    border: 2px solid var(--cor-terciaria);
-    width: 50%;
-    text-align: center;
-    border-radius: 8px;
-    font-size: 1.5rem;
-    font-weight: 600;
-    padding: 21.5px 0;
-    text-decoration: none;
-    color: var(--cor-secundaria);
-    font-family: var(--fonte-secundaria);
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  border: 2px solid var(--cor-terciaria);
+  width: 50%;
+  text-align: center;
+  border-radius: 8px;
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding: 21.5px 0;
+  text-decoration: none;
+  color: var(--cor-secundaria);
+  font-family: var(--fonte-secundaria);
 }
 .apresentacao__links__link:hover {
   background-color: var(--cor-hover);
@@ -97,6 +98,9 @@ body {
   width: 50%;
 }
 .rodape {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: var(--cor-secundaria);
   background-color: var(--cor-terciaria);
   padding: 24px;
